# ComputeShaderShowdown

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.cpp  ss_RenderDoc.cpp  ss_RenderDoc.h  utils.cpp  utils.h
cuda/: bk_cuda.cpp  bk_cuda.h
dx12/: FindD3D12.cmake  bk_dx12.cpp  bk_dx12.h  bk_dx12_utils.cpp  bk_dx12_utils.h  d3dx12.h
module/: module.cpp  module.defs.h  module.h
opencl/: bk_opencl.cpp  bk_opencl.h
opencl/common-lib-amd-APPSDK-3.0/: Global-OpenCL.cmake
opencl/common-lib-amd-APPSDK-3.0/3-0/include/CL/internal/: cl_agent_amd.h  cl_kernel_info_amd.h  cl_profile_amd.h  cl_thread_trace_amd.h
profiling/: Profiling.h  profiling.cpp  rcp.bat  ss_RenderDoc.cpp  ss_RenderDoc.h
vulkan/: bk_vulkan.cpp  bk_vulkan.h  vulkan_utils.cpp  vulkan_utils.h
